biocomplexity/templates/fox-bii-dsc-infomall/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: fox-bii-dsc-infomall-nginx-ingress
  namespace: biocomplexity
spec:
  rules:
  - host: fox-bii-dsc-infomall.pods.uvarc.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: fox-bii-dsc-infomall-service
            port:
              number: 8080
  - host: fox-bii-dsc-infomall.uvadcos.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: fox-bii-dsc-infomall-service
            port:
              number: 8080
